--- a/public/index.html
+++ b/public/index.html
@@ -7,39 +7,38 @@
     <meta name="theme-color" content="#0d0e0e" />
     <meta
       name="description"
-      content="Jericho Bantiquete is a passionate front-end developer based in Philippines who specializes in building responsive websites."
+      content="Manish Adtani is a passionate Full Stack Developer based in India who specializes in building responsive websites."
     />
-    <meta name="author" content="Jericho P. Bantiquete" />
-    <meta name="copyright" content="Jericho P. Bantiquete" />
+    <meta name="author" content="Manish Adtani" />
+    <meta name="copyright" content="Manish Adtani" />
     <meta
       name="keywords"
-      content="portfolio, front-end portfolio,  jericho, jericho bantiquete"
+      content="portfolio, front-end portfolio,  Manish Adtani, Manish Adtani"
     />
-    <meta property="og:url" content="https://jerichobantiquete.netlify.app/" />
+    <meta property="og:url" content="https://Manish Adtani.netlify.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Jericho Bantiquete" />
+    <meta property="og:title" content="Manish Adtani" />
     <meta
       property="og:description"
-      content="Jericho Bantiquete is a passionate front-end developer based in Philippines who specializes in building responsive websites."
+      content="Manish Adtani is a passionate front-end developer based in Philippines who specializes in building responsive websites."
     />
     <meta
       property="og:image"
-      content="https://i.ibb.co/fkTGFgB/jerichobantiquete.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@monciego" />
     <meta
       property="twitter:url"
-      content="https://jerichobantiquete.netlify.app/"
+      content="https://Manish Adtani.netlify.app/"
     />
-    <meta name="twitter:title" content="Jericho Bantiquete" />
+    <meta name="twitter:title" content="Manish Adtani " />
     <meta
       name="twitter:description"
-      content="Jericho Bantiquete is a passionate front-end developer based in Philippines who specializes in building responsive websites."
+      content="Manish Adtani  is a passionate front-end developer based in Philippines who specializes in building responsive websites."
     />
     <meta
       name="twitter:image"
-      content="https://i.ibb.co/fkTGFgB/jerichobantiquete.png"
+      content="https://i.ibb.co/fkTGFgB/Manish Adtani.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -51,7 +50,7 @@
       href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>Jericho Bantiquete</title>
+    <title>Manish Adtani</title>
   </head>
   <body>
     <main id="root"></main>
